# my-standards

./: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  setup.sh
commands/: debug.md  deploy.md  new-endpoint.md  new-feature.md  new-page.md  review.md  security.md
rules/: CODING.md  SECURITY.md  TESTING.md
template/: .cursorrules  AGENTS.md  CLAUDE.md  GEMINI.md
template/.github/workflows/: backend.yml  frontend.yml
template/nextjs/: package.json
template/nextjs-saas/: README.md  package.json
template/nextjs-saas/lib/: api.ts  firebase.ts
template/python-fastapi/: pyproject.toml
template/python-fastapi/tests/: conftest.py
